added paragraph into index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
    <h1>Hello GIT!<h1> 
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. At quaerat necessitatibus doloribus quisquam dignissimos, praesentium id quo, similique dolore, totam nisi vitae fugit officia excepturi quia ullam eveniet deleniti. Sed.
+    </p>
 </body>
 </html>
